fix default toasts on dark mode

--- a/assets/defaults.sass
+++ b/assets/defaults.sass
@@ -217,6 +217,7 @@ $bk-sidebar: 650px
     font-weight: 400
     font-size: 1em
     box-shadow: none
+    color: var(--white)
     &.error
         background-color: var(--red)
     &.success
